--- a/sample-android-app/build.gradle
+++ b/sample-android-app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
+    buildToolsVersion = '28.0.3'
+
     defaultConfig {
         applicationId "com.github.fo2rist.cadabra"
         minSdkVersion 21
@@ -19,8 +21,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility = '1.8'
-        targetCompatibility = '1.8'
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
     }
 }
 
