--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        //JUnit5 - to be able to: apply plugin: "de.mannodermaus.android-junit5"
+        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.3.1.1"
     }
 }
 
