--- a/cadabra-core/build.gradle
+++ b/cadabra-core/build.gradle
@@ -4,10 +4,31 @@ apply plugin: 'kotlin'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
+    //Kotlintest
+    testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
+    testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.3.2'
+
+    //Spek
+    testImplementation "org.spekframework.spek2:spek-dsl-jvm:2.0.4"
+    testRuntimeOnly "org.spekframework.spek2:spek-runner-junit5:2.0.4"
+    // spek requires kotlin-reflect, can be omitted if already in the classpath
+    testRuntimeOnly "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
+    //JUnit5 (Required) Writing and executing Unit Tests on the JUnit Platform
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.4.2"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.4.2"
 }
 
-sourceCompatibility = "7"
-targetCompatibility = "7"
+test {
+    useJUnitPlatform()
+    testLogging {
+        events 'PASSED', 'FAILED', 'SKIPPED'
+    }
+}
+
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 buildscript {
     ext.kotlin_version = '1.3.31'
     repositories {
@@ -36,8 +57,8 @@ compileTestKotlin {
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions {
-        apiVersion = "1.1"
-        languageVersion = "1.1"
+        apiVersion = "1.3"
+        languageVersion = "1.3"
     }
 }
 
