--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,16 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
         //JUnit5 - to be able to: apply plugin: "de.mannodermaus.android-junit5"
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.3.1.1"
+
+        //jacoco android reports (TODO update to next version after 0.14.0 once released)
+        classpath "com.vanniktech:gradle-android-junit-jacoco-plugin:0.13.0"
     }
 }
 
@@ -22,9 +25,10 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
     }
 }
+
+apply plugin: "com.vanniktech.android.junit.jacoco"
 
 task clean(type: Delete) {
     delete rootProject.buildDir
