Add tests for Cadabra class

--- a/default-detekt-config.yml
+++ b/default-detekt-config.yml
@@ -10,6 +10,7 @@ test-pattern: # Configure exclusions for test sources
     - '.*/test/.*'
     - '.*/androidTest/.*'
     - '.*/sharedTest/.*'
+    - '.*TestData.kt'
     - '.*Test.kt'
     - '.*Spec.kt'
     - '.*Spek.kt'
