--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,7 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
-        //JUnit5 - to be able to: apply plugin: "de.mannodermaus.android-junit5"
-        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.3.1.1"
-
+        // for com.vanniktech.android.junit.jacoco plugin
         classpath "com.vanniktech:gradle-android-junit-jacoco-plugin:0.15.0"
     }
 }
@@ -27,6 +25,7 @@ allprojects {
     }
 }
 
+//adds report aggregation tasks such as jacocoTestReport & jacocoTestReport<FLAVOR><BUILD_TYPE>
 apply plugin: "com.vanniktech.android.junit.jacoco"
 
 task clean(type: Delete) {
