--- a/sample-android-app/src/main/AndroidManifest.xml
+++ b/sample-android-app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     package="com.github.fo2rist.cadabra">
 
     <application
-        android:name=".CadabraTestApplication"
+        android:name=".SampleApplication"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:icon="@mipmap/ic_launcher"
