Wrap android experiment data into ExperimentContext class Context contains variant experiment resolved to and implmente resources access methods

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ allprojects {
 
 //adds report aggregation tasks such as jacocoTestReport & jacocoTestReport<FLAVOR><BUILD_TYPE>
 apply plugin: "com.vanniktech.android.junit.jacoco"
+junitJacoco {
+    jacocoVersion = "0.8.4"
+}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
