Change CadabraImpl from object to class Enforce single instance on Cadabra interface only

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ allprojects {
 apply plugin: "com.vanniktech.android.junit.jacoco"
 junitJacoco {
     jacocoVersion = "0.8.4"
+    includeNoLocationClasses = true
 }
 
 task clean(type: Delete) {
