--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,16 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        // for google-services plugin
+        classpath 'com.google.gms:google-services:4.2.0'
 
         // for com.vanniktech.android.junit.jacoco plugin
         classpath "com.vanniktech:gradle-android-junit-jacoco-plugin:0.15.0"
@@ -22,6 +25,22 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+    }
+
+    buildscript {
+        repositories {
+            mavenCentral()
+        }
+    }
+
+    configurations.all {
+        resolutionStrategy {
+            //Force appcompat 28 before migration for Firebase 18+ and AndroidX
+            force 'com.android.support:appcompat-v7:28.0.0'
+            force 'com.android.support:support-v4:28.0.0'
+            force 'com.android.support:support-annotations:28.0.0'
+        }
     }
 }
 
