--- a/cadabra-firebase/build.gradle
+++ b/cadabra-firebase/build.gradle
@@ -34,23 +34,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    api project(path: ':cadabra-core')
+    api project(path: ':cadabra-android')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.google.firebase:firebase-config:17.0.0'
 
     //Kotlintest
     testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
     testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.3.2'
-
-    //JUnit5 (Required for kotlintest and spek)
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.4.2"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.4.2"
-    //Robolectric
-    testImplementation 'org.robolectric:robolectric:4.3'
-    testImplementation 'junit:junit:4.12'
-    //vintage engine is required for Robolectic tests which need JUnit4
-    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:5.4.2"
 
     //Mockito
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
