Add maven publishing support Set version to 0.0.1-SNAPSHOT and configure maven publishing plugin Note that folloving properties are not stored in the repo but required for publishing - SONATYPE_NEXUS_USERNAME - SONATYPE_NEXUS_PASSWORD - signing.keyId - signing.password - signing.secretKeyRingFile

--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,10 @@ buildscript {
         // for google-services plugin
         classpath 'com.google.gms:google-services:4.2.0'
 
-        // for com.vanniktech.android.junit.jacoco plugin
+        // for jacoco aggregator plugin
         classpath "com.vanniktech:gradle-android-junit-jacoco-plugin:0.15.0"
+        // for maven publisher plugin
+        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.8.0'
     }
 }
 
