--- a/cadabra-firebase/build.gradle
+++ b/cadabra-firebase/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: "com.vanniktech.maven.publish"
 
 android {
     compileSdkVersion 28
@@ -9,10 +10,9 @@ android {
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0"
+        versionName "0.0.1"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
