--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,27 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+
+# region Maven publishing
+GROUP=com.fo2rist.cadabra
+VERSION_NAME=0.0.1-SNAPSHOT
+
+POM_URL=https://github.com/fo2rist/cadabra
+POM_SCM_URL=https://github.com/fo2rist/cadabra
+POM_SCM_CONNECTION=scm:git:https://github.com/fo2rist/cadabra
+POM_SCM_DEV_CONNECTION=scm:git:https://github.com/fo2rist/cadabra
+
+POM_LICENCE_NAME=LGPL-3.0
+POM_LICENCE_URL=https://www.gnu.org/licenses/lgpl-3.0.en.html
+POM_LICENCE_DIST=repo
+
+#POM_ARTIFACT_ID=cadabra-core
+
+POM_NAME=cadabra
+POM_PACKAGING=jar
+POM_DESCRIPTION=Library that simplifies A/B tests configuration
+
+POM_DEVELOPER_ID=fo2rist
+POM_DEVELOPER_NAME=Dmitry Sitnikov
+# endregion
