--- a/cadabra-firebase/build.gradle
+++ b/cadabra-firebase/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion = '28.0.3'
 
     defaultConfig {
-        minSdkVersion 21
+        minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
         versionName "0.0.1"
@@ -37,7 +37,7 @@ dependencies {
     api project(path: ':cadabra-android')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'com.google.firebase:firebase-config:17.0.0'
+    implementation 'com.google.firebase:firebase-config:16.0.0' //kept at 16 to support API level 15
 
     //Kotlintest
     testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
