Set version to 0.1.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,8 @@ kotlin.code.style=official
 
 # region Maven publishing
 GROUP=com.fo2rist.cadabra
-VERSION_NAME=0.0.1-SNAPSHOT
+# note: use '-SNAPSHOT' suffix for branch with snapshot builds
+VERSION_NAME=0.1.0
 
 POM_URL=https://github.com/fo2rist/cadabra
 POM_SCM_URL=https://github.com/fo2rist/cadabra
