--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ kotlin.code.style=official
 # region Maven publishing
 GROUP=com.fo2rist.cadabra
 # note: use '-SNAPSHOT' suffix for branch with snapshot builds
-VERSION_NAME=0.2.0
+VERSION_NAME=0.3.0-SNAPSHOT
 
 POM_URL=https://github.com/fo2rist/cadabra
 POM_SCM_URL=https://github.com/fo2rist/cadabra
