--- a/gradle.properties
+++ b/gradle.properties
@@ -37,4 +37,6 @@ POM_DESCRIPTION=Library that simplifies A/B tests configuration
 
 POM_DEVELOPER_ID=fo2rist
 POM_DEVELOPER_NAME=Dmitry Sitnikov
+android.useAndroidX=true
+android.enableJetifier=true
 # endregion
