--- a/cadabra-android/build.gradle
+++ b/cadabra-android/build.gradle
@@ -3,14 +3,12 @@ apply plugin: 'kotlin-android'
 apply plugin: "com.vanniktech.maven.publish"
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion = '29.0.3'
+    compileSdkVersion target_sdk
+    buildToolsVersion = build_tools_version
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 30
-        versionCode 4
-        versionName "0.4.0"
+        minSdkVersion min_sdk
+        targetSdkVersion target_sdk
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
