--- a/sample-android-app/build.gradle
+++ b/sample-android-app/build.gradle
@@ -3,14 +3,14 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion = '29.0.3'
+    compileSdkVersion target_sdk
+    buildToolsVersion = build_tools_version
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 30
-        versionCode 4
-        versionName "0.4.0"
+        minSdkVersion min_sdk
+        targetSdkVersion target_sdk
+        versionCode 1
+        versionName "1"
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
