Update documentation a bit to not mix up tests and experiments

--- a/gradle.properties
+++ b/gradle.properties
@@ -33,7 +33,7 @@ POM_LICENCE_DIST=repo
 
 POM_NAME=cadabra
 POM_PACKAGING=jar
-POM_DESCRIPTION=Library that simplifies A/B tests configuration
+POM_DESCRIPTION=Library that simplifies A/B experiments configuration
 
 POM_DEVELOPER_ID=fo2rist
 POM_DEVELOPER_NAME=Dmitry Sitnikov
