--- a/cadabra-android/build.gradle
+++ b/cadabra-android/build.gradle
@@ -15,6 +15,9 @@ android {
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
+        kotlinOptions {
+            jvmTarget = "1.8"
+        }
     }
 
     testOptions {
@@ -38,19 +41,21 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
-    //Kotlintest
+    // Kotest
     testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
-    testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.3.2'
+    testImplementation 'io.kotest:kotest-runner-junit5:4.3.2'
 
-    //JUnit5 (Required for kotlintest and spek)
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.4.2"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.4.2"
-    //Robolectric
-    testImplementation 'org.robolectric:robolectric:4.3'
-    testImplementation 'junit:junit:4.12'
-    //vintage engine is required for Robolectic tests which need JUnit4
-    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:5.4.2"
+    // JUnit5 (Required for kotlintest and spek)
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 
-    //Mockito
-    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
+    // Robolectric
+    testImplementation 'org.robolectric:robolectric:4.4'
+    testImplementation 'junit:junit:4.13'
+    // vintage engine is required for Robolectic tests which uses JUnit4
+    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.7.0'
+
+    // Mockito
+    testImplementation 'org.mockito:mockito-core:3.7.7'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
 }
