--- a/cadabra-firebase/build.gradle
+++ b/cadabra-firebase/build.gradle
@@ -15,6 +15,9 @@ android {
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
+        kotlinOptions {
+            jvmTarget = "1.8"
+        }
     }
 
     testOptions {
@@ -37,10 +40,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'com.google.firebase:firebase-config:20.0.2'
 
-    //Kotlintest
+    // Kotest
     testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
-    testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.3.2'
+    testImplementation 'io.kotest:kotest-runner-junit5:4.3.2'
 
-    //Mockito
-    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
+    // Mockito
+    testImplementation 'org.mockito:mockito-core:3.7.7'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
 }
